refactor: remake home page

--- a/src/global.css
+++ b/src/global.css
@@ -4,7 +4,7 @@
 
 @theme {
   --color-header: #090b10;
-  --color-background: #141620;
+  --color-background: #0c0d13;
   --color-title: #e5e5e5;
 
   --font-lato: Lato, sans-serif;
